# m1_iot_cyber

./: README.md
act-sauvage-25/TP1/: README.md  tp1.py
act-sauvage-25/TP2_lucas/: README.md  game.py  script.py
act-sauvage-25/tp3_sauvage/: README.md  binpackinstance.txt  fastbinpackinstance.txt  reduction.py  verif_certif.py
act-sauvage-25/tp4/: heuristic.py  ils.py  random_ordo.py  readme.md  test.py  vnd.py
act-sauvage-25/tp4/__MACOSX/SMTWP/: ._n100_17_b.txt  ._n100_36_b.txt
cle/tp-4-arduino/: README.md
cle/tp-4-arduino/cle_tp/sketch_oct17a/: Text File.txt  sketch_oct17a.ino
cle/tp-4-arduino/doc/: README.org
cle/tp-5-pico-project/: CMakeLists.txt  FreeRTOSConfig.h  README.md  README.org  fetch_time.py  lwipopts.h  pico_project.cpp
cle/tp-5-pico-project/exemples/: CMakeLists.txt  example_sc_minilib.cpp
cle/tp-5-pico-project/lib/pico_buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
cle/tp-5-pico-project/lib/pico_lcd/: CMakeLists.txt  FreeRTOSConfig.h  display.cpp  display.h  grove_map.h  i2c_scan.c  i2c_scan.h  lcd.c  lcd.h  onboard_temp.c  onboard_temp.h
cle/tp-5-pico-project/lib/sc_minilib/: CMakeLists.txt  state_chart.hpp
cle/tp-5-pico-project/lib/sc_minilib/freeRTOS_files/: CMakeLists.txt  ptime.cpp  sm_defs.cpp  timeout.cpp
cle/tp-5-pico-project/lib/sc_minilib/freeRTOS_files/includes/: ptime.h  sm_defs.h  timeout.h
cle/tp-5-pico-project/lib/sc_minilib/linux_files/: CMakeLists.txt
cle/tp3-sc-project/: .gitignore  ACGui.py  ACSimulator.py  Makefile  README.md  ac.yaml  both.yaml  cu.yaml  lr.yaml  room_temp.py  run.sh  test.py
cle/tp3-sc-project/docs/: README.md  README.org
dac-sauvage-25-26/: README.md
dac-sauvage-25-26/tp1/: between_instances.txt  readme.md
dac-sauvage-25-26/tp1/scripts/: install_ufw.sh
dac-sauvage-25-26/tp2/: README.md
dac-sauvage-25-26/tp3/: README.md
dac-sauvage-25-26/tp4/: README.md  ansible.cfg  main.yml  requirements.yml
dac-sauvage-25-26/tp4/inventory/: hosts.yml
dac-sauvage-25-26/tp4/playbooks/: configure_replica.yml  debug_both.yml  debug_proxy.yml  debug_replica_1.yml  debug_replica_2.yml  debug_replica_into_1.yml
dac-sauvage-25-26/tp4/roles/configure_proxy/handlers/: main.yml
dac-sauvage-25-26/tp4/roles/configure_proxy/tasks/: main.yml
dac-sauvage-25-26/tp4/roles/debug_proxy/defaults/: main.yml
dac-sauvage-25-26/tp4/roles/debug_proxy/tasks/: main.yml
dac-sauvage-25-26/tp4/roles/mysql_configure_first/handlers/: main.yml
dac-sauvage-25-26/tp4/roles/mysql_configure_first/tasks/: main.yml
dac-sauvage-25-26/tp4/roles/mysql_configure_second/tasks/: main.yml
dac-sauvage-25-26/tp4/roles/prepare_replica_1/handlers/: main.yml
dac-sauvage-25-26/tp4/roles/prepare_replica_1/tasks/: main.yml
dac-sauvage-25-26/tp4/roles/replica_1/defaults/: main.yml
dac-sauvage-25-26/tp4/roles/replica_1/tasks/: main.yml
dac-sauvage-25-26/tp4/roles/replica_2/tasks/: main.yml
dac-sauvage-25-26/tp4/roles/stop_mysql_2/tasks/: main.yml
dac-sauvage-25-26/tp4/roles/ufw_configure/tasks/: main.yml
dac-sauvage-25-26/tp4/search_process/outdated_playbooks/: config_primary.yml  config_replication.yml  config_replication_2.yml  config_ufw.yml  create_db_client.yml  create_db_server.yml  fill_db.yml
dac-sauvage-25-26/tp5/: .gitignore  README.md  main.tf  terraform.tfstate  terraform.tfstate.backup
dac-sauvage-25-26/tp6/: Q1.sh  Q2.sh  Q2.yaml  Q2_on_vm.sh  Q3-secret.yaml  Q3.sh  Q3.yaml  Q3_on_vm.sh  Q4.sh  Q4.yaml  Q4_on_vm.sh  README.md  ansible.cfg
dac-sauvage-25-26/tp6/ansible/inventory/: hosts.yml
dac-sauvage-25-26/tp6/ansible/playbooks/: Q1_install_minikube.yml
dac-sauvage-25-26/tp7/: README.md  execute_verif.sh  execute_verif_on_vm.sh  verif.yaml
dac-sauvage-25-26/tp7/ansible/: ansible.cfg  clouds.yaml  openstack.yaml
dac-sauvage-25-26/tp7/ansible/playbook/: docker_k8s.yaml  test.yaml
dac-sauvage-25-26/tp7/tofu/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
dac-sauvage-25-26/tp8/: README.md
dac-sauvage-25-26/tp8/Q1/: Q1.sh  Q1_on_vm.sh  configmap.yaml  persistent_volume.yaml  services.yaml  statefulset.yaml
dac-sauvage-25-26/tp8/Q2/: Q2.sh  Q2_on_vm.sh  configmap.yaml  persistent_volume.yaml  services.yaml  statefulset.yaml
pje-sauvage-25-26/: Makefile  README.md  requirements.txt
pje-sauvage-25-26/data/: .~lock.testdata.manual.2009.06.14.csv#  cleaned_exemple.csv  cleaned_testdata.manual.2009.06.14.csv  cleaned_tweets_avengers_na.csv  exemple.csv  graded_bayes_cleaned_tweets_avengers_na.csv  graded_bayes_graded_knn_cleaned_testdata.manual.2009.06.14.csv  graded_knn_cleaned_testdata.manual.2009.06.14.csv  graded_knn_cleaned_tweets_avengers_na.csv  negative.txt  positive.txt  tweets_avengers_na.csv
pje-sauvage-25-26/src/: main.py
pje-sauvage-25-26/src/graphic/: gui.py  main_window.py  style.qss
pje-sauvage-25-26/src/graphic/pages/: dashboard.py  handle_clusters.py  handle_databases.py  knn.py
pje-sauvage-25-26/src/graphic/popup/: popus.py
pje-sauvage-25-26/src/tools/: baysienne_tools.py  clusters.py  csv_tools.py  distance.py  gui_tools.py
(+21 files in other folders)
